fix(styles): gallery thumbs on mobile is hidden

--- a/packages/shared/styles/components/molecules/SfGallery.scss
+++ b/packages/shared/styles/components/molecules/SfGallery.scss
@@ -15,6 +15,7 @@
   }
   &__item {
     display: flex;
+    flex: 0 0 var(--gallery-thumb-width, 10rem);
     margin: var(--gallery-item-margin, 0 var(--spacer-xs) 0 0);
     &:last-child {
       --gallery-item-margin: 0;
